[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


#[tool.poetry]
#name = "your_package"
#...

#[tool.poetry.dependencies]
#numpy = "^1.19.2"  # example version
#...

#[tool.poetry.extras]
#torch = ["torch", "torchvision"]
#jax = ["jax", "jaxlib", "equinox"]

